# AI_Research_Reporter

./: .gitignore  CICD_best_practices_in_2026_20260422_123737.md  Dockerfile  Jenkinsfile  README.md  app.py  cloud_app.py  docker-compose.yml  incident_report.md  nginx.conf  prometheus.yml  pyproject.toml  report.md  requirements.txt
.github/workflows/: docker-image.yml
k8s/: deployment.yaml  service.yaml
src/ai_research_reporter/: api.py  crew.py  main.py
src/ai_research_reporter/config/: agents.yaml  tasks.yaml
